tests/toy/neg/000269_mutation.toylang
program a = { do while a do sleep; } .
